commuting a working version of zoom to layer

--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "leaflet": "^1.9.4",
+    "ol": "^10.2.1",
+    "ol-contextmenu": "^5.5.0",
+    "ol-ext": "^4.0.23",
+    "vue": "^3.2.13",
+    "vue3-openlayers": "^11.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
